# fastapi-sandbox

./: README.md
fastapi-cource/: README.md  database.db  item.py  items.py  postgres_main.py  pyproject.toml  users.db
fastapi-cource/authentication/: db.py  main.py  models.py  schemas.py
fastapi-course/: main.py  pyproject.toml
sandbox/: README.md  main.py  pyproject.toml
